force-app/main/default/objects/Quote/fields/Amount_Remaining_as_Text__c.field-meta.xml
<CustomField>
    <fullName>Amount_Remaining_as_Text__c</fullName>
    <formula>&quot;$&quot;&amp; TEXT(Amount_Remaining__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Remaining as Text</label>
    <type>Text</type>
</CustomField>