force-app/main/default/objects/Quote/fields/Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Birthdate__c</fullName>
    <formula>TEXT(DAY( Contact.Birthdate ))&amp;&quot;/&quot;&amp;TEXT(MONTH( Contact.Birthdate ))&amp;&quot;/&quot;&amp;TEXT(YEAR( Contact.Birthdate ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birthdate</label>
    <type>Text</type>
</CustomField>