force-app/main/default/objects/Quote/fields/Created_Date_Form__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Form__c</fullName>
    <formula>DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date</label>
    <type>Date</type>
</CustomField>