force-app/main/default/objects/Quote/fields/Cycle_Number__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Number__c</fullName>
    <formula>Cycle__r.CaseNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cycle Number</label>
    <type>Text</type>
</CustomField>