force-app/main/default/objects/Quote/fields/Date_Created__c.field-meta.xml
<CustomField>
    <fullName>Date_Created__c</fullName>
    <label>Date Created</label>
    <type>Date</type>
</CustomField>