force-app/main/default/objects/Quote/fields/Deposit_Paid_as_Text__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Paid_as_Text__c</fullName>
    <formula>&quot;$&quot;&amp;TEXT( Deposit_Paid__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deposit Paid as Text</label>
    <type>Text</type>
</CustomField>