force-app/main/default/objects/Quote/fields/Medicare_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Expiry__c</fullName>
    <formula>Contact.Medicare_Expiry__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Medicare Expiry</label>
    <type>Text</type>
</CustomField>