force-app/main/default/objects/Quote/fields/Medicare_Number__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Number__c</fullName>
    <formula>Contact.Medicare_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Medicare Number</label>
    <type>Text</type>
</CustomField>