force-app/main/default/objects/Quote/fields/Patient_DOB__c.field-meta.xml
<CustomField>
    <fullName>Patient_DOB__c</fullName>
    <formula>Contact.Birthdate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient DOB</label>
    <type>Text</type>
</CustomField>