force-app/main/default/objects/Quote/fields/Price_Type__c.field-meta.xml
<CustomField>
    <fullName>Price_Type__c</fullName>
    <formula>TEXT (Cycle__r.Price_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Type</label>
    <type>Text</type>
</CustomField>