force-app/main/default/objects/Quote/fields/Quote_Consent_Signed__c.field-meta.xml
<CustomField>
    <fullName>Quote_Consent_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote &amp; Consent Signed</label>
    <type>Checkbox</type>
</CustomField>