force-app/main/default/objects/Quote/fields/Quote_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Expiry_Date__c</fullName>
    <formula>CreatedDate  + 365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Expiry Date</label>
    <type>Date</type>
</CustomField>