force-app/main/default/objects/Quote/fields/Quote_Validity__c.field-meta.xml
<CustomField>
    <fullName>Quote_Validity__c</fullName>
    <formula>IF(Valid_Quote_Consent__c, &quot;QUOTE VALID&quot;, &quot;QUOTE INVALID&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Validity</label>
    <type>Text</type>
</CustomField>