force-app/main/default/objects/Quote/fields/Recipient_Address__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Address__c</fullName>
    <formula>Contact.MailingStreet&amp;&quot; &quot;&amp;Contact.MailingCity&amp;&quot;,&quot;&amp;&quot; &quot;&amp;Contact.MailingState&amp;&quot; &quot;&amp;Contact.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recipient Address</label>
    <type>Text</type>
</CustomField>