force-app/main/default/objects/Quote/fields/Valid_Quote_Consent__c.field-meta.xml
<CustomField>
    <fullName>Valid_Quote_Consent__c</fullName>
    <formula>IF(AND(Quote_Expiry_Date__c &gt; TODAY(), Quote_Consent_Signed__c = TRUE, Consent_Attached__c = TRUE), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote &amp; Consent Valid?</label>
    <type>Checkbox</type>
</CustomField>