force-app/main/default/objects/Quote/listViews/Invalid_Financial_Consents.listView-meta.xml
<ListView>
    <fullName>Invalid_Financial_Consents</fullName>
    <columns>QUOTE.NAME</columns>
    <columns>QUOTE.SUBTOTAL</columns>
    <columns>QUOTE.TOTALPRICE</columns>
    <columns>CreatedBy</columns>
    <columns>Created_Date_Form__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Quote_Validity__c</field>
        <operation>equals</operation>
        <value>QUOTE INVALID</value>
    </filters>
    <filters>
        <field>Created_Date_Form__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <label>Invalid FQ&amp;C&apos;s - 30 Days View</label>
</ListView>